fix: change navbar z-index to clickable

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -317,7 +317,7 @@ pre code {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 3;
+  z-index: 1000;
   .sans-serif;
   .navbar-brand {
     font-weight: 800;
